docs: add swagger documentation in show and update
